# spine_robot_gui

./: README.md
src/spine_robot_gui/: package.xml  setup.cfg  setup.py
src/spine_robot_gui/Arduino Code/gui_controlled_spine_robot/: gui_controlled_spine_robot.ino
src/spine_robot_gui/spine_robot_gui/: gui.py  gui.ui  gui_node.py  main.py  serial_node.py
