<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spine_robot_gui</name>
  <version>1.0.0</version>
  <description>GUI to facilitate control of needle insertion robot 
    for in-development semi-autonomous vertebroplasty system</description>
  <maintainer email="aayodej3@jhu.edu">Tunde Ayodeji</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>